<resources>
    <string name="app_name">InventoryNanoAppTwo</string>
    <string name="book_details">Book Details</string>
    <string name="book_name">Book Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="supplier_name">Name</string>
    <string name="supplier_phone_number">Phone Number</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity">Editor Activity</string>
    <string name="currency">₹</string>

    <string name="deleted_all_books_message">rows deleted from book table</string>
    <string name="price_label">Price</string>
    <string name="stock_level_label">Stock</string>

    <string name="quantity_change_msg">Quantity updated</string>
    <string name="quantity_finish_msg">Book is out of stock</string>
    <string name="detail_activity">Details Activity</string>
    <string name="less">\u003c</string>
    <string name="more">\u003e</string>
    <string name="phone_image">phone image</string>
    <string name="empty_view_image">empty view image</string>

    <string name="empty_view_subtitle_text"> \u0020 Get started! \n Add new book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete_all_books_dialog_msg">Delete all books?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="main_sell_book_item_successful">One unit has been sold</string>
    <string name="main_delete_all_books_successful">All books deleted</string>
    <string name="main_books_table_is_empty">The books database is empty</string>
    <string name="main_sell_book_item_failed">Error with selling book\'s item</string>
    <string name="main_sell_book_item_failed_stock_empty">Stock for this book is empty</string>
    <string name="main_delete_all_books_failed">Error with deleting the books</string>

    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_book_requires_name">Book requires a name</string>
    <string name="editor_book_requires_supplier_name">Book requires a supplier name</string>
    <string name="editor_book_requires_supplier_phone_number">Book requires a supplier\'s phone number</string>
    <string name="editor_book_invalid_supplier_phone_number">The supplier\'s phone number is not valid</string>
    <string name="editor_book_requires_price">Book requires a price</string>
    <string name="editor_book_requires_positive_price">Book requires a positive price</string>
    <string name="editor_book_requires_positive_stock_level">Book requires a positive stock level</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_failed">Error with updating book</string>
</resources>